kubernetes/learning-examples/hello-world/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/part-of: ztc-examples
    example: "true"
