kubernetes/learning-examples/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/part-of: ztc-examples
    example: "true"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: hello-world
